<resources>
    <string name="app_name">Hollywood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>

    <string name="spinner_title">All Categories</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="hollywood">HOLLYWOOD</string>
    <string name="categories">Categories</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="rating">Rating</string>
    <string name="_7_5_10">7.5/10</string>
    <string name="voting_count">Voting Count</string>
    <string name="_6000">6000</string>
    <string name="popularity">Popularity</string>
    <string name="_302_62">302.62</string>
    <string name="description">Description:</string>
    <string name="this_is_what_is_was_talking_about_how_are_you_doing_with_your_movie_is_it_going_good_or_bad_so_when_you_first_made_the_movie_was_it_successful_i_know_it_wouldn_t_be_because_the_movie_was_made_by_you">This is what is was talking about, how are you doing with your movie, is it going good or bad. So when you first made the movie was it successful, I know it wouldn\'t be because the movie was made by you.</string>
    <string name="genre">Genre:</string>
    <string name="horror_action_drama">Horror, Action, Drama</string>
    <string name="release_date">Release Date:</string>
    <string name="_2017_10_27">2017-10-27</string>
    <string name="developed">DEVELOPED</string>
    <string name="by">BY</string>
    <string name="satyaraj">SATYARAJ</string>
    <string name="search">Search</string>

</resources>
